# esp32-s3-smart-safety-monitor

./: .gitignore  CMakeLists.txt  HARDWARE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pio_pre_embed_web.py  platformio.ini  sdkconfig.defaults
.github/workflows/: validate.yml
docs/: GITHUB_METADATA.md  HARDWARE_LAB_CARD.md  MEDIA_EVIDENCE.md  PROJECT_STATUS.md  PROTOCOL.md  SOURCE_PROVENANCE.md  VERIFICATION.md
hardware/: BOM.csv
hardware/eda/: bom-export.csv
hardware/eda/gerber/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
main/: CMakeLists.txt  actuator_ctrl.c  actuator_ctrl.h  alarm_logic.c  alarm_logic.h  app_config.h  font.h  font_glcd.c  local_config.example.h  main.c  motor_ctrl.c  motor_ctrl.h  oled_display.c  oled_display.h  radar_scan.c  radar_scan.h  sensor_adc.c  sensor_adc.h  sensor_flame.c  sensor_flame.h  sensor_mq2.c  sensor_mq2.h  sensor_mq5.c  sensor_mq5.h  sensor_ultrasonic.c  sensor_ultrasonic.h  servo_ctrl.c  servo_ctrl.h  web_server.c  web_server.h
main/web/: index.html
scripts/: check_repo.py  secret_scan.py  verify.sh
tests/: test_source_contracts.py
tools/: embed_web.py
